<resources>
    <string name="app_name" translatable="false">Sturing</string>
    <string name="title_activity_main" translatable="false">Sturing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="change_image">Change photo</string>
    <string name="name">Name</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="site" translatable="false">Site</string>
    <string name="save">Save</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login" translatable="false">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="signUp">Sign up</string>
    <string name="title_activity_create_user">Create user</string>
    <string name="description">Description</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="group_name">Group name</string>
    <string name="group_site">Group site</string>
    <string name="new_group">New group</string>
    <string name="personal_data">Personal data</string>
    <string name="groups">Group</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="notamemberyet">Not a member yet?</string>
    <string name="alreadyHaveAccount">Already have an account?</string>
    <string name="signIn">Sign In</string>
    <string name="questions">Questions</string>
    <string name="flash_cards" translatable="false">Flash Cards</string>
    <string name="group_list">Groups - List</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="registration_failed">Registration failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="addQuestion">Add New Question</string>
    <string name="addComment">New Comment</string>
    <string name="requests">Requests</string>
    <string name="friends">Friends</string>
    <string name="add_member">Add Member</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="group_requests">Group Requests</string>
    <string name="flash_card_title">Flash Card title</string>
    <string name="title">Title</string>
    <string name="flash_card_subtitle">Flash Card subtitle</string>
    <string name="subtitle">Subtitle</string>
    <string name="flash_card_description">Flash Card description</string>
    <string name="scrolling_view_behavior" translatable="false">scroll_view_behavior</string>
    <string name="doing">Doing</string>
    <string name="done">Done</string>
    <string name="to_do">To Do</string>
    <string name="set_to_do">Set as To Do</string>
    <string name="set_doing">Set as Doing</string>
    <string name="set_done">Set as Done</string>
    <string name="deck_title">Deck Title</string>
    <string name="deck_description">Deck Description</string>
    <string name="deck">Decks</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="card_question">Card Question</string>
    <string name="card_answer">Card Answer</string>
    <string name="error_must_end_with_interrogation">A question must finish with an interrogation symbol</string>
    <string name="add_a_new_card"><![CDATA[Add a new card ->]]></string>
    <string name="add_friends">Add Friends</string>
    <string name="kanban" translatable="false">Kanban</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
