<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/baseline_group_black_48"
            android:title="@string/groups" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/new_group" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/baseline_group_black_48"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_requests"
            app:actionLayout="@layout/notification"
            android:icon="@drawable/baseline_group_black_48"
            android:title="@string/requests" />

        <item
            android:id="@+id/nav_addfriends"
            android:icon="@drawable/baseline_group_black_48"
            android:title="@string/add_friends" />

           <!-- -->
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/baseline_settings_black_48"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/logout" />
            <!--
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
                -->
        </menu>
    </item>

</menu>
